unpackaged/objects/Case.object
<CustomObject>
  <businessProcesses>
    <fullName>CRM Requests</fullName>
    <isActive>true</isActive>
    <values>
      <fullName>Active</fullName>
    </values>
    <values>
      <fullName>Cancelled %26 Closed</fullName>
    </values>
    <values>
      <fullName>In Deployment</fullName>
    </values>
    <values>
      <fullName>New</fullName>
      <default>true</default>
    </values>
    <values>
      <fullName>Parked for future</fullName>
    </values>
    <values>
      <fullName>Solved %26 Closed</fullName>
    </values>
    <values>
      <fullName>Waiting For User Feedback</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>Credit and Rebill</fullName>
    <isActive>true</isActive>
    <values>
      <fullName>Awaiting Final Invoice to be sent to customer</fullName>
    </values>
    <values>
      <fullName>Cancelled %26 Closed</fullName>
    </values>
    <values>
      <fullName>Closed</fullName>
    </values>
    <values>
      <fullName>Waiting For Internal Feedback</fullName>
      <default>true</default>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>EquipmentComplaint</fullName>
    <isActive>true</isActive>
    <values>
      <fullName>Addition Provided</fullName>
    </values>
    <values>
      <fullName>Answer Provided</fullName>
    </values>
    <values>
      <fullName>Cancelled</fullName>
    </values>
    <values>
      <fullName>Completed</fullName>
    </values>
    <values>
      <fullName>Customer Action</fullName>
    </values>
    <values>
      <fullName>Forwarded</fullName>
    </values>
    <values>
      <fullName>In Process</fullName>
    </values>
    <values>
      <fullName>New</fullName>
      <default>true</default>
    </values>
    <values>
      <fullName>Not Completed</fullName>
    </values>
    <values>
      <fullName>Solution Provided</fullName>
    </values>
    <values>
      <fullName>Waiting</fullName>
    </values>
    <values>
      <fullName>ready for release</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>Return Authorization</fullName>
    <description>Currently Used by North America Implants to track returns process</description>
    <isActive>true</isActive>
    <values>
      <fullName>Authorized</fullName>
      <default>true</default>
    </values>
    <values>
      <fullName>Closed</fullName>
    </values>
    <values>
      <fullName>In Process</fullName>
    </values>
    <values>
      <fullName>Received</fullName>
    </values>
    <values>
      <fullName>Waiting For Customer Feedback</fullName>
    </values>
    <values>
      <fullName>Waiting For Internal Feedback</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>Service Complaint</fullName>
    <description>The global module to handle Service Complaint</description>
    <isActive>true</isActive>
    <values>
      <fullName>Active</fullName>
    </values>
    <values>
      <fullName>Closed</fullName>
    </values>
    <values>
      <fullName>New</fullName>
      <default>true</default>
    </values>
    <values>
      <fullName>Solved</fullName>
    </values>
    <values>
      <fullName>Waiting For Customer Feedback</fullName>
    </values>
    <values>
      <fullName>Waiting For Internal Feedback</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>TrackWise</fullName>
    <isActive>true</isActive>
    <values>
      <fullName>Active</fullName>
    </values>
    <values>
      <fullName>Closed</fullName>
    </values>
    <values>
      <fullName>New</fullName>
      <default>true</default>
    </values>
    <values>
      <fullName>Solved</fullName>
    </values>
    <values>
      <fullName>Waiting For Customer Feedback</fullName>
    </values>
    <values>
      <fullName>Waiting For Internal Feedback</fullName>
    </values>
  </businessProcesses>
  <fields>
    <fullName>Account_Country__c</fullName>
    <formula>Text( Account.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Market__c</fullName>
    <formula>Text( Account.Market__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Market</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Owner_Manager__c</fullName>
    <formula>Account.Owner.Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Manager</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Owner__c</fullName>
    <formula>Account.Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AddressCombinedFields__c</fullName>
    <description>Used mainly to pull the combined fields field from the address to be used in the Service cloud flow directly.</description>
    <formula>Address__r.CombinedFields__c</formula>
    <label>Address Combined Fields</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SureSmile Address HRID</description>
    <inlineHelpText>SureSmile Address</inlineHelpText>
    <label>Address</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Address__c.Account__c</field>
        <operation>equals</operation>
        <valueField>$Source.AccountId</valueField>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Amount_for_ReturnExchange__c</fullName>
    <inlineHelpText>Order amount of original order of products.</inlineHelpText>
    <label>Amount for Return or Exchange</label>
    <summarizedField>Article__c.Total_Original_Purchase_Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Article__c.RecordTypeId</field>
      <operation>equals</operation>
      <value>Return Authorization</value>
    </summaryFilterItems>
    <summaryForeignKey>Article__c.Related_Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Approval_Routing__c</fullName>
    <label>Approval Routing</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>User_Country__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Rep, Manager</fullName>
        </value>
        <value>
          <fullName>Manager, Sales Director</fullName>
        </value>
        <value>
          <fullName>Rep, Manager, Sales Director</fullName>
        </value>
        <value>
          <fullName>Manager, Sales Director, Finance</fullName>
        </value>
        <value>
          <fullName>Rep, Manager, Sales Director, Finance</fullName>
        </value>
        <value>
          <fullName>Manager Only</fullName>
        </value>
        <value>
          <fullName>Customer Service Only</fullName>
        </value>
        <value>
          <fullName>Customer Service Manager, Finance</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Area_Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Article_Number__c</fullName>
    <description>Used to fill in the article number related to a sevice feedback case.</description>
    <label>Article Number</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Assign_To__c</fullName>
    <label>Assign To</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>User_Country__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Me</fullName>
        </value>
        <value>
          <fullName>Previous Owner</fullName>
        </value>
        <value>
          <fullName>Case Creator</fullName>
        </value>
        <value>
          <fullName>00G0J000003GzvNUAS</fullName>
          <label>Queue: US Guide Tier 2 Support</label>
        </value>
        <value>
          <fullName>00G0J000003GzvMUAS</fullName>
          <label>Queue: US Atlantis Tier 2 Support</label>
        </value>
        <value>
          <fullName>00G0J000003GzvOUAS</fullName>
          <label>Queue: US Manager Support</label>
        </value>
        <value>
          <fullName>00G0J000003GzvPUAS</fullName>
          <label>Queue: US Tier 3 Waltham Atlantis IT</label>
        </value>
        <value>
          <fullName>00G200000013dpIEAQ</fullName>
          <label>Queue: IMPL - Simplant Support 3rd</label>
        </value>
        <value>
          <fullName>00G20000002uPo9EAE</fullName>
          <label>Queue: IMPL - Control Tower</label>
        </value>
        <value>
          <fullName>00G20000002uPoEEAU</fullName>
          <label>Queue: IMPL - ATL Europe</label>
        </value>
        <value>
          <fullName>00G20000002uV5REAU</fullName>
          <label>Queue: IMPL - ATL Supra Support 2nd</label>
        </value>
        <value>
          <fullName>00G0J000003H1b0UAC</fullName>
          <label>Queue: IMPL - Azento Support 2nd</label>
        </value>
        <value>
          <fullName>00G200000013cadEAA</fullName>
          <label>Queue: IMPL - Simplant Support 2nd</label>
        </value>
        <value>
          <fullName>00G20000002uPoJEAU</fullName>
          <label>Queue: IMPL - Venlo Warehouse</label>
        </value>
        <value>
          <fullName>00G0J000002twr9UAA</fullName>
          <label>Queue: DE: DI - ATLANTIS Support</label>
        </value>
        <value>
          <fullName>00G200000013jSGEAY</fullName>
          <label>Queue: DE: DI - Service Complaint</label>
        </value>
        <value>
          <fullName>00G200000013d44EAA</fullName>
          <label>Queue: DE: DI - SIMPLANT Support</label>
        </value>
        <value>
          <fullName>00G0J000002tx8AUAQ</fullName>
          <label>Queue: DE: Product Improvements</label>
        </value>
        <value>
          <fullName>00G20000002uStfEAE</fullName>
          <label>Queue: DE: Retouren Gutschrift</label>
        </value>
        <value>
          <fullName>00G20000002uStpEAE</fullName>
          <label>Queue: DE: Service Reklamationen</label>
        </value>
        <value>
          <fullName>00G20000002uStkEAE</fullName>
          <label>Queue: DE: UPS Rückholung</label>
        </value>
        <value>
          <fullName>00G20000002uStuEAE</fullName>
          <label>Queue: DE: Web-Shop</label>
        </value>
        <value>
          <fullName>00G20000002uStaEAE</fullName>
          <label>Queue: DE: Wert Gutschrift</label>
        </value>
        <value>
          <fullName>00G6M000004GTcqUAG</fullName>
          <label>Queue: UK/IE: CS - IMPL</label>
        </value>
        <value>
          <fullName>00G6M000004GTcvUAG</fullName>
          <label>Queue: UK/IE: CS - PRE</label>
        </value>
        <value>
          <fullName>00G6M000004GTd0UAG</fullName>
          <label>Queue: UK/IE: CS - SuperUser</label>
        </value>
        <value>
          <fullName>00G6M000004GUc8UAG</fullName>
          <label>Queue: SureSmile - Engineering</label>
        </value>
        <value>
          <fullName>00G6M000004GUcNUAW</fullName>
          <label>Queue: SureSmile - Mfg Richardson</label>
        </value>
        <value>
          <fullName>00G6M000004GUcIUAW</fullName>
          <label>Queue: SureSmile - Mfg Mexicali</label>
        </value>
        <value>
          <fullName>00G6M000004GUc3UAG</fullName>
          <label>Queue: SureSmile - Digital Lab</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CRM_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional field! it will be populated by the Created User if left blank and the creator is not a system admin</inlineHelpText>
    <label>CRM Analyst</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>User.User_Type__c</field>
        <operation>equals</operation>
        <value>National Admin</value>
      </filterItems>
      <filterItems>
        <field>User.IsActive</field>
        <operation>equals</operation>
        <value>True</value>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CRM_Requests</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>CS_Processing_Time_Rec_to_Closed__c</fullName>
    <formula>IF (Returns_Processing_Time_Rec_to_Closed__c &gt; 0, /*check to see if Returns Processing Time is greater than zero*/
TEXT(FLOOR( Returns_Processing_Time_Rec_to_Closed__c)) &amp; " days " &amp; /*returns the number of days in Returns Processing Time*/
TEXT(FLOOR( 24 * (Returns_Processing_Time_Rec_to_Closed__c - FLOOR(Returns_Processing_Time_Rec_to_Closed__c) ))) &amp; " hours " &amp; /*returns the remaining number of hours in Returns Processing Time*/
TEXT(ROUND(60 * (ROUND( 24 * ( Returns_Processing_Time_Rec_to_Closed__c - FLOOR(Returns_Processing_Time_Rec_to_Closed__c) ),8) - FLOOR(ROUND(24 * (Returns_Processing_Time_Rec_to_Closed__c - FLOOR(Returns_Processing_Time_Rec_to_Closed__c) ),8)) ),0)) &amp; " mins" /*returns the remaining number of minutes in Returns Processing Time*/
, "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Processing Time Rec to Closed</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CS_Processing_Time__c</fullName>
    <formula>Customer_Service_Processing_Completed__c - Field_Approvals_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Processing Time(Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Cancellation_reason__c</fullName>
    <description>Add information about why you cancelled the CRM Request. - USED FOR CRM REQUESTS</description>
    <inlineHelpText>Add information about why you cancelled the CRM Request.</inlineHelpText>
    <label>Cancellation reason</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>CaseType__c</fullName>
    <label>Case Type (Global)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Service complaint</fullName>
          <color>#0B6FCE</color>
          <label>Customer Complaint</label>
        </value>
        <value>
          <fullName>General support/question</fullName>
          <color>#A845DC</color>
          <label>Customer Interaction</label>
        </value>
        <value>
          <fullName>Return</fullName>
          <color>#419249</color>
          <label>Return</label>
        </value>
        <value>
          <fullName>Credit/rebill</fullName>
          <color>#A53711</color>
          <label>Credit/rebill</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Case_Definition__c</fullName>
    <formula>Case(TEXT( Transaction_Type__c),"Return", IMAGE("/servlet/servlet.FileDownload?file=0150J0000045JgE", "Product Return", 50,200),"Exchange",IMAGE("/servlet/servlet.FileDownload?file=0150J0000045JgJ", "Product Exchange",50,200),"Credit/Rebill", IMAGE("/servlet/servlet.FileDownload?file=0150J0000045JgO", "Product Exchange",50,200),"NULL")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Definition</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Case_HQ__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case # (HQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Case_ID_HQ__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID (18 Digits)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Case_Initiated_By__c</fullName>
    <label>Case Initiated By</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Sales Rep</fullName>
        </value>
        <value>
          <fullName>Sales Manager</fullName>
        </value>
        <value>
          <fullName>Area Director</fullName>
        </value>
        <value>
          <fullName>Customer Service</fullName>
        </value>
        <value>
          <fullName>Account Executive</fullName>
        </value>
        <value>
          <fullName>Finance</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Case_Owner_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Role</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Case_Record__c</fullName>
    <formula>CASE(  RecordType.Name  , 'Service Complaint', "Service Case", "Siroforce", "Siroforce Case","Case")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Case_Stage__c</fullName>
    <label>Case Stage</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>New</fullName>
        </value>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Authorized</fullName>
        </value>
        <value>
          <fullName>Received</fullName>
        </value>
        <value>
          <fullName>In Progress</fullName>
        </value>
        <value>
          <fullName>Approval</fullName>
        </value>
        <value>
          <fullName>Closed</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Case_Subtype__c</fullName>
    <label>Case Subtype</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Reason</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Courtesy Credit</fullName>
        </value>
        <value>
          <fullName>Late Delivery</fullName>
        </value>
        <value>
          <fullName>Late Order Release</fullName>
        </value>
        <value>
          <fullName>Lost shipment</fullName>
        </value>
        <value>
          <fullName>Master Incorrect</fullName>
        </value>
        <value>
          <fullName>Missed Discount</fullName>
        </value>
        <value>
          <fullName>Price Not Communicated</fullName>
        </value>
        <value>
          <fullName>Pricing Error</fullName>
        </value>
        <value>
          <fullName>Rebill To Correct Account</fullName>
        </value>
        <value>
          <fullName>Wrong Account</fullName>
        </value>
        <value>
          <fullName>Wrong Shipping Address</fullName>
        </value>
        <value>
          <fullName>Wrong Shipping Method</fullName>
        </value>
        <value>
          <fullName>Wrong Terms</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Case_Turnaround_Time_Assigned_to_Closed__c</fullName>
    <formula>IF( IsClosed =FALSE, "",

TEXT(
 FLOOR(ClosedDate -  Date_Assigned_to_Owner__c )
)  &amp; " Days " &amp;
TEXT(
ROUND(MOD((ClosedDate - Date_Assigned_to_Owner__c)*24,24),0)
         )  &amp;" Hours " &amp;
TEXT(
ROUND(MOD((ClosedDate - Date_Assigned_to_Owner__c)*1440,60),0)
) &amp;" Minutes ")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Turnaround Time Assigned to Closed</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Complaint_Category__c</fullName>
    <description>We couldn't use the standard field Type since there are many limitations with standard fields</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>CaseType__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Billing</fullName>
          <color>#339999</color>
          <label>Billing</label>
        </value>
        <value>
          <fullName>Communication &amp; Service</fullName>
          <color>#0B6FCE</color>
          <label>Communication &amp; Service</label>
        </value>
        <value>
          <fullName>Consignment</fullName>
          <color>#419249</color>
          <label>Consignment</label>
        </value>
        <value>
          <fullName>Customer Error</fullName>
        </value>
        <value>
          <fullName>Customer Interaction</fullName>
          <color>#FF0000</color>
          <default>true</default>
          <label>Customer Interaction</label>
        </value>
        <value>
          <fullName>Customer Service Error</fullName>
          <color>#A845DC</color>
          <label>Customer Service Error</label>
        </value>
        <value>
          <fullName>Dropped Implant</fullName>
          <color>#FF9900</color>
          <label>Dropped Implant</label>
        </value>
        <value>
          <fullName>E-commerce site</fullName>
          <color>#A53711</color>
          <label>E-commerce site</label>
        </value>
        <value>
          <fullName>Exchange</fullName>
          <color>#66E9BD</color>
          <label>Exchange</label>
        </value>
        <value>
          <fullName>Hardware</fullName>
        </value>
        <value>
          <fullName>Lost Shipment Error</fullName>
          <color>#0B24BE</color>
          <label>Lost Shipment Error</label>
        </value>
        <value>
          <fullName>Marketing</fullName>
        </value>
        <value>
          <fullName>Orders</fullName>
          <color>#999999</color>
          <label>Orders</label>
        </value>
        <value>
          <fullName>Orders &amp; Billing</fullName>
          <color>#419249</color>
          <label>Orders &amp; Billing</label>
        </value>
        <value>
          <fullName>Over Ordered</fullName>
          <color>#B6E32E</color>
          <label>Over Ordered</label>
        </value>
        <value>
          <fullName>Pricing System Error</fullName>
          <color>#3333FF</color>
          <label>Pricing System Error</label>
        </value>
        <value>
          <fullName>Product Related</fullName>
          <color>#F96FB7</color>
          <label>Product Related</label>
        </value>
        <value>
          <fullName>Rebate</fullName>
        </value>
        <value>
          <fullName>Return</fullName>
          <color>#2F5D85</color>
          <label>Return</label>
        </value>
        <value>
          <fullName>Sales Team Error</fullName>
          <color>#AFCADF</color>
          <label>Sales Team Error</label>
        </value>
        <value>
          <fullName>Shipping</fullName>
          <color>#663300</color>
          <label>Shipping</label>
        </value>
        <value>
          <fullName>Software Complaint</fullName>
          <color>#EFAE73</color>
          <label>Software</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Complaint_Reason2__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Complaint_Category__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Academy/Loyalty</fullName>
          <color>#33FFFF</color>
          <label>Academy/Loyalty</label>
        </value>
        <value>
          <fullName>Account maintenance</fullName>
          <color>#FF9900</color>
          <label>Account maintenance</label>
        </value>
        <value>
          <fullName>Account set up</fullName>
          <color>#003300</color>
          <label>Account set up</label>
        </value>
        <value>
          <fullName>Account set up issues</fullName>
          <color>#000000</color>
          <label>Account set up issues</label>
        </value>
        <value>
          <fullName>Assist with order placement</fullName>
          <color>#FF99FF</color>
          <label>Assist with order placement</label>
        </value>
        <value>
          <fullName>Backorder follow up</fullName>
          <color>#CC66CC</color>
          <label>Backorder follow up</label>
        </value>
        <value>
          <fullName>Break-Fix</fullName>
        </value>
        <value>
          <fullName>Cancelled order</fullName>
          <color>#CC33CC</color>
          <label>Cancelled order</label>
        </value>
        <value>
          <fullName>Carrier late delivery</fullName>
          <color>#993399</color>
          <label>Carrier late delivery</label>
        </value>
        <value>
          <fullName>Carrier lost package</fullName>
          <color>#663366</color>
          <label>Carrier lost package</label>
        </value>
        <value>
          <fullName>CEREC direct connect</fullName>
          <color>#666666</color>
          <label>CEREC direct connect</label>
        </value>
        <value>
          <fullName>Courtesy Credit</fullName>
          <color>#78C953</color>
          <label>Courtesy Credit</label>
        </value>
        <value>
          <fullName>Crash</fullName>
          <color>#E27001</color>
          <label>Crash</label>
        </value>
        <value>
          <fullName>Credit</fullName>
          <color>#990000</color>
          <label>Credit</label>
        </value>
        <value>
          <fullName>Customer notes not followed</fullName>
          <color>#009900</color>
          <label>Customer notes not followed</label>
        </value>
        <value>
          <fullName>Customer payment</fullName>
          <color>#339999</color>
          <label>Customer payment</label>
        </value>
        <value>
          <fullName>Customer training</fullName>
          <color>#3333FF</color>
          <label>Customer training</label>
        </value>
        <value>
          <fullName>Delay in Finance order release</fullName>
          <color>#6600CC</color>
          <label>Delay in Finance order release</label>
        </value>
        <value>
          <fullName>Delivered to Incorrect Address</fullName>
          <color>#A845DC</color>
          <label>Delivered to Incorrect Address</label>
        </value>
        <value>
          <fullName>Duplicated Order</fullName>
          <color>#F3D904</color>
          <label>Duplicated Order</label>
        </value>
        <value>
          <fullName>Excessive phone wait time</fullName>
          <color>#6633FF</color>
          <label>Excessive phone wait time</label>
        </value>
        <value>
          <fullName>Excessive wait time for approval</fullName>
          <color>#3366FF</color>
          <label>Excessive wait time for approval</label>
        </value>
        <value>
          <fullName>General inquiry</fullName>
          <color>#00CCCC</color>
          <label>General inquiry</label>
        </value>
        <value>
          <fullName>Hardware</fullName>
          <color>#33CC00</color>
          <label>Hardware</label>
        </value>
        <value>
          <fullName>Incorrect Article/s</fullName>
          <color>#0B24BE</color>
          <label>Incorrect Article/s</label>
        </value>
        <value>
          <fullName>Incorrect articles picked</fullName>
          <color>#FFCC33</color>
          <label>Incorrect articles picked</label>
        </value>
        <value>
          <fullName>Incorrect Components</fullName>
          <color>#B6E32E</color>
          <label>Incorrect Components</label>
        </value>
        <value>
          <fullName>Incorrect Customer Number</fullName>
          <color>#641CCF</color>
          <label>Incorrect Customer Number</label>
        </value>
        <value>
          <fullName>Incorrect Guide Type</fullName>
          <color>#AFCADF</color>
          <label>Incorrect Guide Type</label>
        </value>
        <value>
          <fullName>Incorrect Payment Terms</fullName>
          <color>#57F17C</color>
          <label>Incorrect Payment Terms</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>BY</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>DK</fullName>
        </value>
        <value>
          <fullName>ES</fullName>
        </value>
        <value>
          <fullName>FI</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>ID</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>KZ</fullName>
        </value>
        <value>
          <fullName>MY</fullName>
        </value>
        <value>
          <fullName>NO</fullName>
        </value>
        <value>
          <fullName>PH</fullName>
        </value>
        <value>
          <fullName>SE</fullName>
        </value>
        <value>
          <fullName>UA</fullName>
        </value>
        <value>
          <fullName>US</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CreatedByMe__c</fullName>
    <description>Help field used in list view to filter dynamically the cases the users has created</description>
    <formula>If( CreatedById = $User.Id,"True","False")</formula>
    <inlineHelpText>DO NOT ADD TO PAGE LAYOUT</inlineHelpText>
    <label>Created By Me?</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_Country__c</fullName>
    <formula>TEXT(CreatedBy.User_Country__c)</formula>
    <label>Creator Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Credit_Order_Amount_Formula__c</fullName>
    <formula>Credit_Order_Amount__c</formula>
    <label>Credit Order Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Credit_Order_Amount__c</fullName>
    <label>Credit Order Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Credit_Order_Number__c</fullName>
    <label>Credit Order Number</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Credit_Order_Total__c</fullName>
    <label>Credit Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Credit_Rebill__c</fullName>
    <label>Credit/Rebill</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Customer_Service_Processing_Completed__c</fullName>
    <inlineHelpText>For tracking the Customer Service KPI Turn around time</inlineHelpText>
    <label>Customer Service Processing Completed</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Date_Assigned_to_Owner__c</fullName>
    <label>Date Assigned to Owner</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Denial_Order_Tracking_Number__c</fullName>
    <label>Denial Order Tracking Number</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Denial_Ship_Date__c</fullName>
    <inlineHelpText>Ship Date of the Return of Denied Products back to the Customer.</inlineHelpText>
    <label>Denial Ship Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Dev_environment_sync__c</fullName>
    <description>Used to keep track of changes to production that must be synced with the development environments including git-hub that we have.</description>
    <label>Dev environment sync</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Dev Env sync required</fullName>
        </value>
        <value>
          <fullName>Dev Env Sync completed</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Development_ID__c</fullName>
    <description>Applicable only for Digital Software Support</description>
    <inlineHelpText>Applicable only for Digital Software Support</inlineHelpText>
    <label>Development ID</label>
    <length>25</length>
    <type>Text</type>
  </fields>
</CustomObject>